  configurable via CLI, env and px.ini.
- Added --restart to quit Px and start a new instance - #185
- Fixed #184 - PAC proxy list was including blank entries
- Fixed #152 - increased number of default threads from 5 to 32
- Fixed issue leading to connection reuse by client after HTTPS connection was
  closed by server
- Mapped additional libcurl errors to HTTP errors to inform client

v0.8.4 - 2023-02-06
- Support for specifying PAC file encoding - #167
- Fixed #164 - PAC function myIpAddress() was broken
- Fixed #161 - PAC regex search was failing
- Fixed #171 - Verbose output implies --foreground

v0.8.3 - 2022-07-19
- Fixed #157 - libcurl wrapper was missing socket definitions for OSX
- Fixed #158 - win32ctypes was not being included in Windows binary
- Fixed #160 - need to convert PAC return values into CURLOPT_PROXY schemes

v0.8.2 - 2022-06-29
- Fixed #155 - prevent SSL connection reuse for libcurl < v7.45

v0.8.1 - 2022-06-27
- Fixed #154 - improved SSL connection handling with libcurl by querying active
  socket to get the sock_fd in select() instead of relying on sockopt_callback()
  which does not get called when connections get reused
- Fixed keyring dependencies on Linux
- Added infrastructure to generate and post binary wheels for Px and all its
  dependencies for offline installation

v0.8.0 - 2022-06-18
- Added PAC file support for Linux
- Local PAC files on Windows are now processed using QuickJS instead of WinHttp
- Added CAINFO bundle in Windows builds

v0.7.2 - 2022-06-14
- Fixed #152 - handle connection errors in select loop gracefully
- Fixed #151 - handle libcurl 7.29 on Centos7

v0.7.1 - 2022-06-13
- Fixed #146 - px --install was broken when run in cmd.exe, also when
  run as `python -m px`
- Fixed #148 - 407 proxy required was not being detected generically
- Fixed #151 - handle older versions of libcurl gracefully
- Fixed issues with --quit not exiting child processes or working correctly
  in binary mode

v0.7.0 - 2022-05-12