@@ -14,21 +14,22 @@ pac =
 ;   Specify in case default 'utf-8' encoding does not work
 ; pac_encoding =
 
-; IP interface to listen on - default: 127.0.0.1
+; Network interface(s) to listen on. Comma separated, default: 127.0.0.1
+;   --gateway and --hostonly override this to bind to all interfaces
 listen = 127.0.0.1
 
 ; Port to run this proxy on - default: 3128
 port = 3128
 
 ; Allow remote machines to use proxy. 0 or 1, default: 0
-;   Overrides 'listen' and binds to all interfaces
+;   Overrides --listen and binds to all interfaces
 gateway = 0
 
 ; Allow only local interfaces to use proxy. 0 or 1, default: 0
 ;   Px allows all IP addresses assigned to local interfaces to use the service.
 ;   This allows local apps as well as VM or container apps to use Px when in a
-;   NAT config. Px does this by listening on all interfaces and overriding the
-;   allow list.
+;   NAT config. Overrides --listen and binds to all interfaces, overrides the
+;   default --allow rules
 hostonly = 0
 
 ; Allow connection from specific subnets. Comma separated, default: *.*.*.*
