@@ -24,6 +24,7 @@ v0.9.0
 - Fixed issue leading to connection reuse by client after HTTPS connection was
   closed by server
 - Mapped additional libcurl errors to HTTP errors to inform client
+- Added support to listen on multiple interfaces - #195
 
 v0.8.4 - 2023-02-06
 - Support for specifying PAC file encoding - #167
